# FinancialOrganiser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CsvParser.cpp  CsvParser.h  FinancialOrganiser.cpp  FinancialOrganiser.h  bill.cpp  bill.h  cppcsv.h  database.cpp  database.h  debug.h  helpers.cpp  helpers.h  importstatement.cpp  importstatement.h  main.cpp  mainwindow.cpp  mainwindow.h  mystatements.cpp  mystatements.h  newbill.cpp  newbill.h  selectbill.cpp  selectbill.h  statement.cpp  statement.h  style.h
ui/: deleteStatementConfirmation.ui  editgroup.ui  importstatement.ui  mainwindow.ui  mystatements.ui  newBill.ui  selectbill.ui
